--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,5 +1,4 @@
 .banner {
-    background-image: url('https://wallpaperaccess.com/full/2703652.png');
     background-size: cover;
     height: 444px;
     width: inherit;
@@ -40,7 +39,7 @@
 
 .description {
     width: 45rem;
-    line-height: 1.3;;
+    line-height: 1.3;
     padding-top: 1rem;
     font-size: 0.9rem;
     height: 80px;
@@ -49,5 +48,5 @@
 
 .fade_bottom {
     height: 7.4rem;
-    background-image:  linear-gradient(180deg, transparent, rgba(37, 37, 37, .61), #111);
+    background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, .61), #111);
 }
